--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juliana Baez</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="flex">
+        <nav class="flex" >
+            <ul class="flex">
+                <li> <span class="boton"> <a class="colorancla" href="">HOLA</a></span></li>
+                <li> <span class="boton"> <a class="colorancla" href="">CONOCIMIENTOS</a></span></li>
+                <li> <span class="boton"> <a class="colorancla" href="">PROYECTOS</a></span></li>
+                <li> <span class="botoncontacto"> <a class="colorcontacto"href="">CONTACTO</a></span></li>
+            </ul>
+        </nav>
+
+
+    </header>
     
 </body>
 </html>
