modifique color header, empece section about

--- a/index.html
+++ b/index.html
@@ -7,23 +7,38 @@
     <title>Juliana Baez</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/section.css">
+    <link rel="stylesheet" href="./styles/about.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="flex">
         <nav class="flex" >
             <ul class="flex">
-                <li> <span class="boton"> <a class="colorancla" href="">HOLA</a></span></li>
-                <li> <span class="boton"> <a class="colorancla" href="">CONOCIMIENTOS</a></span></li>
-                <li> <span class="boton"> <a class="colorancla" href="">PROYECTOS</a></span></li>
-                <li> <span class="botoncontacto"> <a class="colorcontacto"href="">CONTACTO</a></span></li>
+                <li> <span class="button"> <a class="coloranchor" href="">HOLA</a></span></li>
+                <li> <span class="button"> <a class="coloranchor" href="">CONOCIMIENTOS</a></span></li>
+                <li> <span class="button"> <a class="coloranchor" href="">PROYECTOS</a></span></li>
+                <li> <span class="contactbutton"> <a class="buttoncolor"href="">CONTACTO</a></span></li>
             </ul>
         </nav>
-
-
     </header>
+    <section class="section">
+        <div class="about">
+            <div class="hello">
+                <h2 class="hola">¡Hola! Soy</h2> 
+                <h1 class="JB">Juliana Baez</h1>
+                <p class="description">Letras, futura desarrolladora </p>
+                <div class="contactbutton buttoncolor"> <p class="weight500">LO QUE HAGO</p></div>
+                               
+            </div>
+            <img class="imagesize"src="./assets/images/undraw_book_reading_kx9s.svg" alt="">
+        </div>
+
+    </section>
     
 </body>
 </html>
