empece section skills

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/section.css">
     <link rel="stylesheet" href="./styles/about.css">
+    <link rel="stylesheet" href="./styles/skills.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,7 +27,8 @@
             </ul>
         </nav>
     </header>
-    <section class="section">
+   
+    <section class="section-about" >
         <div class="about">
             <div class="hello">
                 <h2 class="hola">¡Hola! Soy</h2> 
@@ -37,8 +39,13 @@
             </div>
             <img class="imagesize"src="./assets/images/undraw_book_reading_kx9s.svg" alt="">
         </div>
-
+    </section>
+    <section class="section-skills column">
+        <div class="skills column">
+            <h1>Mis conocimientos</h1>
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
+        </div>
     </section>
     
-</body>
-</html>
+    </body>
+    </html>
