modifiqué tamaños de títulos y paddings

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </section>
     <section class="section-skills column">
         <div class="skills column">
-            <h1>Mis conocimientos</h1>
-            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
+            <h1 class="conocimientos">Mis conocimientos</h1>
+            <p class="textcenter loremsize"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
         </div>
     </section>
     
