terminé la sección skills

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4df7e684b7.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- HEADER-->
     <header class="flex">
         <nav class="flex" >
             <ul class="flex">
@@ -27,7 +29,7 @@
             </ul>
         </nav>
     </header>
-   
+   <!-- HOLA SOY-->
     <section class="section-about" >
         <div class="about">
             <div class="hello">
@@ -40,12 +42,22 @@
             <img class="imagesize"src="./assets/images/undraw_book_reading_kx9s.svg" alt="">
         </div>
     </section>
+    <!-- MIS CONOCIMIENTOS-->
     <section class="section-skills column">
-        <div class="skills column">
-            <h1 class="conocimientos">Mis conocimientos</h1>
-            <p class="textcenter loremsize"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
-        </div>
+            <div class="skills column">
+                <h1 class="conocimientos">Mis conocimientos</h1>
+                <p class="textcenter loremsize"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
+            </div>
+            <div class="cardscontainer">
+                <div class="cards"> <i class="fab fa-html5 iconcard htmlicon"></i> <h2>HTML5</h2></div>
+                <div class="cards"><i class="fab fa-css3-alt iconcard cssicon"></i> <h2>CSS</h2> </div>
+                <div class="cards"><i class="fab fa-sass iconcard sassicon"></i>  <h2>Sass</h2></div>
+                <div class="cards"><i class="fab fa-js iconcard javaicon"></i> <h2>JavaScript</h2></div>
+                <div class="cards"><i class="fab fa-react iconcard reacticon"></i><h2>React</h2></div>
+                <div class="cards"><i class="fab fa-git-alt iconcard giticon">  </i><h2>GIT</h2></div>
+            </div>        
     </section>
+    <!-- CITA-->
     
     </body>
     </html>
