agregué la section quote y empecé projects

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./styles/section.css">
     <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="./styles/quote.css">
+    <link rel="stylesheet" href="./styles/projects.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,28 +38,50 @@
                 <h2 class="hola">¡Hola! Soy</h2> 
                 <h1 class="JB">Juliana Baez</h1>
                 <p class="description">Letras, futura desarrolladora </p>
-                <div class="contactbutton buttoncolor"> <p class="weight500">LO QUE HAGO</p></div>
-                               
+                <div class="contactbutton"> <p class="weight500"> <a class="buttoncolor" href="">LO QUE HAGO</a></p></div>
             </div>
             <img class="imagesize"src="./assets/images/undraw_book_reading_kx9s.svg" alt="">
         </div>
     </section>
     <!-- MIS CONOCIMIENTOS-->
     <section class="section-skills column">
-            <div class="skills column">
-                <h1 class="conocimientos">Mis conocimientos</h1>
+            <div class="section-titlebox column">
+                <h1 class="section-titletext">Mis conocimientos</h1>
                 <p class="textcenter loremsize"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
             </div>
-            <div class="cardscontainer">
-                <div class="cards"> <i class="fab fa-html5 iconcard htmlicon"></i> <h2>HTML5</h2></div>
-                <div class="cards"><i class="fab fa-css3-alt iconcard cssicon"></i> <h2>CSS</h2> </div>
-                <div class="cards"><i class="fab fa-sass iconcard sassicon"></i>  <h2>Sass</h2></div>
-                <div class="cards"><i class="fab fa-js iconcard javaicon"></i> <h2>JavaScript</h2></div>
-                <div class="cards"><i class="fab fa-react iconcard reacticon"></i><h2>React</h2></div>
-                <div class="cards"><i class="fab fa-git-alt iconcard giticon">  </i><h2>GIT</h2></div>
+            <div class="skillcards-container">
+                <div class="skill-cards"> <i class="fab fa-html5 iconcard htmlicon"></i> <h2>HTML 5</h2></div>
+                <div class="skill-cards"><i class="fab fa-css3-alt iconcard cssicon"></i> <h2>CSS 3</h2> </div>
+                <div class="skill-cards"><i class="fab fa-sass iconcard sassicon"></i> <h2>Sass</h2></div>
+                <div class="skill-cards"><i class="fab fa-js iconcard javaicon"></i> <h2>JavaScript</h2></div>
+                <div class="skill-cards"><i class="fab fa-react iconcard reacticon"></i> <h2>React</h2></div>
+                <div class="skill-cards"><i class="fab fa-git-alt iconcard giticon"> </i> <h2>GIT</h2></div>
             </div>        
     </section>
     <!-- CITA-->
+    <section class="section-quote column">
+        <i class="fas fa-quote-left quote-icon"></i>
+        <p class="quote-text textcenter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae facere facilis nihil modi voluptatibus, repellendus officia nobis nostrum tempore aperiam dolorem quae molestias tenetur ea temporibus autem possimus. Voluptates, nulla.</p>
+        <i class="fas fa-quote-right quote-icon"></i>
+        <h2 class="author">Cara de mono</h2>        
+    </section>
+    <!-- MIS PROYECTOS-->
+    <section class="section-projects column">
+        <div class="section-titlebox column">
+            <h1 class="section-titletext">Mis Proyectos</h1>
+            <p class="textcenter loremsize"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore animi ullam est aut explicabo temporibus nam fuga. </p>
+        </div>
+        <div class="projectcards-container">
+            <div class="project-cards"></div>
+            <div class="project-cards"><img class="img-size" src="./assets/images/undraw_Playful_cat_rchv.svg" alt=""></div>
+            <div class="project-cards"></div>
+            <div class="project-cards"></div>
+            <div class="project-cards"></div>
+            <div class="project-cards"></div>
+            <div class="project-cards"></div>
+        </div>
+    </section>
+
     
     </body>
     </html>
