comencé con responsive

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     <!-- HEADER-->
-    <header class="row">
-        <nav class="row" >
+    <header>
+        <nav class="row">
             <ul class="row">
                 <li> <span class="button"> <a class="coloranchor" href="#ABOUT">HOLA</a></span></li>
                 <li> <span class="button"> <a class="coloranchor" href="#SKILLS">CONOCIMIENTOS</a></span></li>
@@ -100,7 +100,7 @@
     </section>
     <!-- CONTACTO-->
     <a name="CONTACT"></a>
-    <section class="section-contact">
+    <!-- <section class="section-contact">
        <div class="contact-container">
            <div class="box">
                 <h2 class="section-titletext">Contactame</h2>
@@ -158,7 +158,7 @@
             </div>                     
 
         </div>
-     </section>
+     </section> -->
      <footer class="column">
          <div class="links-footer">
             <ul class="row">
