--- a/index.html
+++ b/index.html
@@ -100,39 +100,39 @@
     </section>
     <!-- CONTACTO-->
     <a name="CONTACT"></a>
-    <!-- <section class="section-contact">
+    <section class="section-contact">
        <div class="contact-container">
            <div class="box">
                 <h2 class="section-titletext">Contactame</h2>
                 <p class="contact-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni assumenda, debitis quo tenetur minima labore. Odit facilis tempora nobis laboriosam labore, dolor nisi quibusdam ex incidunt saepe quisquam.</p>
                 <ul>
                     <li class="link-box">
-                        <a href="https://discord.com/channels/@juliana%20baez#1016" class="black-text" target="_blank">
+                        <a href="https://discord.com/channels/@juliana%20baez#1016" class="link-text" target="_blank">
                             <i class="icon fab fa-discord"></i>
                             julianabaez#1016   
                         </a>
                     </li>
                     <li class="link-box">
-                        <a href="https://github.com/julianabaezz/" class="black-text" target="_blank">
+                        <a href="https://github.com/julianabaezz/" class="link-text" target="_blank">
                             <i class="icon fab fa-github-alt"></i>
                             julianabaezz
                         </a>
                     </li>
                     <li class="link-box">
-                        <a href="https://www.linkedin.com/in/juliana-baez-53b090149/" class="black-text" target="_blank">
+                        <a href="https://www.linkedin.com/in/juliana-baez-53b090149/" class="link-text" target="_blank">
                             <i class="icon fab fa-linkedin"></i>   
                            Juliana Baez
                         </a>
                     </li>
                     <li class="link-box">
-                        <a href="mailto:juliana.baez@outlook.com" class="black-text" target="_blank">
+                        <a href="mailto:juliana.baez@outlook.com" class="link-text sizemailtext" target="_blank">
                             <i class="icon fas fa-envelope"></i> 
                             juliana.baez@outlook.com
                         </a>
                     </li>
                 </ul>               
             </div>
-            <div class="box">
+            <!-- <div class="box">
                 <h2 class="section-titletext">Escribime</h2>
                 <form action="basededatos.php" method="GET">
                     <div class="nameform">
@@ -155,10 +155,10 @@
                     </div>             
                   
                 </form>
-            </div>                     
+            </div>                      -->
 
         </div>
-     </section> -->
+     </section>
      <footer class="column">
          <div class="links-footer">
             <ul class="row">
