arreglé detalles html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="hello">
                 <h2 class="hola">¡Hola! Soy</h2> 
                 <h1 class="JB">Juliana Baez</h1>
-                <p class="description">Licenciatura en letras, desarrolladora web. </p>
+                <p class="description">Licenciatura en letras, desarrollo web. </p>
                 <div class="contactbutton"> <p class="weight500"> <a class="buttoncolor" href="#PROJECTS">LO QUE HAGO</a></p></div>
             </div>
             <img class="about-imgsize"src="./assets/images/undraw_book_reading_kx9s.svg" alt="mujerleyendo" title="¡Hola!">
@@ -139,7 +139,7 @@
             </div>
             <div class="box">
                 <h2 class="section-titletext">Escribime</h2>
-                <form action="basededatos.php" method="GET">
+                <form action="" method="GET">
                     <div class="nameform">
                         <div class="name">
                             <label for="idNombre"> Nombre:*</label>
@@ -158,7 +158,7 @@
                         <label for="idMensaje">Mensaje:</label> <textarea placeholder= "Escriba un mensaje aquí"
                         name="" id="idComentarios" cols="50" rows="10" maxlength="100"></textarea>
                     </div> 
-                    <button class="sendbutton weight500"type="submit">ENVIAR</button>            
+                    <button class="sendbutton weight500" type="submit">ENVIAR</button>            
                   
                 </form>
             </div>                     
