arreglo de detalles corregidos por el profesor

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <p class="textcenter loremsize">Estas son algunas de las habilidades que adquirí y otras que todavía estoy aprendiendo</p>
             </div>
             <div class="skillcards-container">
-                <div class="skill-cards"><i class="fab fa-html5 iconcard htmlicon"></i> <h2>HTML 5</h2></div>
-                <div class="skill-cards"><i class="fab fa-css3-alt iconcard cssicon"></i> <h2>CSS 3</h2> </div>
-                <div class="skill-cards"><i class="fab fa-sass iconcard sassicon"></i> <h2>Sass</h2></div>
-                <div class="skill-cards"><i class="fab fa-js iconcard javaicon"></i> <h2>JavaScript</h2></div>
-                <div class="skill-cards"><i class="fab fa-react iconcard reacticon"></i> <h2>React</h2></div>
-                <div class="skill-cards"><i class="fab fa-git-alt iconcard giticon"> </i> <h2>GIT</h2></div>
+                <div class="skill-cards"><i class="fab fa-html5 iconcard htmlicon"></i> <h2 class="hidden">HTML 5</h2></div>
+                <div class="skill-cards"><i class="fab fa-css3-alt iconcard cssicon"></i> <h2 class="hidden">CSS 3</h2> </div>
+                <div class="skill-cards"><i class="fab fa-sass iconcard sassicon"></i> <h2 class="hidden">Sass</h2></div>
+                <div class="skill-cards"><i class="fab fa-js iconcard javaicon"></i> <h2 class="hidden">JavaScript</h2></div>
+                <div class="skill-cards"><i class="fab fa-react iconcard reacticon"></i> <h2 class="hidden">React</h2></div>
+                <div class="skill-cards"><i class="fab fa-git-alt iconcard giticon"> </i> <h2 class="hidden">GIT</h2></div>
             </div>        
     </section>
     <!-- FIN SECCIÓN MIS CONOCIMIENTOS -->
