--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards"> 
                 <img class ="project-imgsize" src="./assets/images/undraw_personal_website_weap.svg" alt="portfolio" title="Portfolio"> <h4>Portfolio</h4> 
             </a>
-            <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards"> 
+            <a href="https://julianabaezz.github.io/Generador-de-memes/" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_Playful_cat_rchv.svg" alt="cat" title="Generador de memes"> <h4>Generador de memes</h4> 
             </a>
-            <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards"> 
+            <a href="https://alexaquijano22.github.io/proyecto-matcheADAs/" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_gaming_6oy3.svg" alt="game" title="Match 3"><h4>Match 3</h4>
             </a>
-            <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards"> 
+            <a href="https://lourdeslunaweb.github.io/ahorrADAs/" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_Savings_re_eq4w.svg" alt="money" title="Controlador de gastos"> <h4>Controlador de gastos</h4>
             </a>
             <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards">
@@ -159,7 +159,7 @@
                         name="" id="idComentarios" cols="50" rows="10" maxlength="100"></textarea>
                     </div> 
                     <button class="sendbutton weight500" type="submit">ENVIAR</button>            
-                  
+                
                 </form>
             </div>                     
 
