--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
             <p class="textcenter loremsize">Proyectos ya realizados y en proceso </p>
         </div>
         <div class="projectcards-container">
-            <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards"> 
+            <a href="https://julianabaezz.github.io/portfolio-ada/" target="_blank" class="project-cards"> 
                 <img class ="project-imgsize" src="./assets/images/undraw_personal_website_weap.svg" alt="portfolio" title="Portfolio"> <h4>Portfolio</h4> 
             </a>
-            <a href="https://julianabaezz.github.io/Generador-de-memes/" class="project-cards"> 
+            <a href="https://julianabaezz.github.io/Generador-de-memes/" target="_blank" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_Playful_cat_rchv.svg" alt="cat" title="Generador de memes"> <h4>Generador de memes</h4> 
             </a>
-            <a href="https://alexaquijano22.github.io/proyecto-matcheADAs/" class="project-cards"> 
+            <a href="https://alexaquijano22.github.io/proyecto-matcheADAs/" target="_blank" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_gaming_6oy3.svg" alt="game" title="Match 3"><h4>Match 3</h4>
             </a>
-            <a href="https://lourdeslunaweb.github.io/ahorrADAs/" class="project-cards"> 
+            <a href="https://lourdeslunaweb.github.io/ahorrADAs/" target="_blank" class="project-cards"> 
                 <img class="project-imgsize" src="./assets/images/undraw_Savings_re_eq4w.svg" alt="money" title="Controlador de gastos"> <h4>Controlador de gastos</h4>
             </a>
             <a href="https://julianabaezz.github.io/portfolio-ada/" class="project-cards">
