--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juliana Baez</title>
+    <link rel="shortcut icon" href="./assets/images/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/sections.css">
@@ -139,7 +140,7 @@
             </div>
             <div class="box">
                 <h2 class="section-titletext">Escribime</h2>
-                <form action="" method="GET">
+                <form action="mailto:juliana.baez@outlook.com" method="POST" enctype="text/plain">
                     <div class="nameform">
                         <div class="name">
                             <label for="idNombre"> Nombre:*</label>
